styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
}

:root {
    --brand-main: #453f8f;
    --light-blue: #aadef3;
}

body {
    background-color: white;
    height: 100%;
    width: 100%;
    font-family: "Gilroy Light", sans-serif;
}

.header {
    height: 7rem;
    background: var(--brand-main);
    font-size: 3rem;
    display: flex;
    font-family: "Gilroy Extra Bold", sans-serif;
}

.left {
    width: 33.33%;
    padding: 1rem 1rem;
    display: flex;
    align-items: center;
}

.center {
    width: 33.33%;
    font-size: 1em;
    font-weight: bold;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
}

img {
    max-width: 90%;
    max-height: 90%;
}

.nav {
    width: 100%;
    background: var(--light-blue);
    height: 4rem;
    font-size: 1.3rem;
    display: flex;
    justify-content: space-around;
    align-items: center;
    font-family: "Quicksand Bold", sans-serif;
}

.nav ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav ul li a {
    margin: 0 2rem;
    text-decoration: none;
    color: inherit;
}

.about {
    margin: 1rem 10rem 1rem 10rem;
    width: 40rem;
}

header {
    text-align: left;
    padding: 1.3rem 0;
    font-size: 300%;
    font-weight: 700;
}

p {
    font-family: "Gilroy Light", sans-serif;
    font-size: 100%;
    line-height: 2rem;
}

.body-under-header {
    display: flex;
    justify-content: space-between;
}

.contact-info {
    width: 30rem;
    margin: 6.6rem 0rem;
}

.contact-info img {
    max-width: 20rem;
}

.contact-links img {
    max-width: 4rem;
}

.contact-links a {
    text-decoration: none;
    color: inherit;
}

.contact-links {
    display: flex;
    flex-direction: column;
    justify-content: left;
    align-items: left;
    margin: 1rem;
}

.contact-link {
    vertical-align: middle;
    border: 1rem;
}

